--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,14 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: Fairtrain
+description: Towards fairer training data
 theme: just-the-docs
 
-url: https://just-the-docs.github.io
+url: https://fairtrain.github.io
 
 aux_links:
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+  "Fairtrain on GitHub": https://github.com/fairtrain/fairtrain.github.io
+
+# Makes Aux links open in a new tab. Default is false
+aux_links_new_tab: true
+
+# Set a path/url to a logo that will be displayed instead of the title
+favicon_ico: "/assets/images/iceberg.ico"
