--- a/_config.yml
+++ b/_config.yml
@@ -12,3 +12,7 @@ aux_links_new_tab: true
 
 # Set a path/url to a logo that will be displayed instead of the title
 favicon_ico: "/assets/images/iceberg.ico"
+
+# Footer content
+# appears at the bottom of every page's main content
+footer_content: "Copyright &copy; 2025 Fairtrain Contributors. Distributed under the <a href=\"https://github.com/fairtrain/fairtrain.github.io/blob/main/LICENSE\">MIT License</a>."
