--- a/_config.yml
+++ b/_config.yml
@@ -12,3 +12,8 @@ aux_links_new_tab: true
 
 # Set a path/url to a logo that will be displayed instead of the title
 favicon_ico: "/assets/images/iceberg.ico"
+
+callouts:
+  note:
+    title: Note
+    color: blue
